<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image_detail_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_detail_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_image" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_product_name"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_detail_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_price"
                android:inputType="number"
                android:maxLength="6" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_detail_supplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_supplier"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_detail_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_contact"
                android:inputType="phone"
                android:maxLength="13" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/detail_quantity" />

            <Button
                android:id="@+id/button_detail_subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/detail_button_subbtract" />

            <TextView
                android:id="@+id/text_detail_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20" />

            <Button
                android:id="@+id/button_detail_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/detail_button_add" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>